--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@ $(function () {
     }
 
     // open connection
-    var connection = new WebSocket('ws://192.168.2.101:3001');
+    var connection = new WebSocket('ws://localhost:3001');
 
     connection.onopen = function () {
         // first we want users to enter their names
