--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>  <html class="ie ie6 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 7]>     <html class="ie ie7 lte9 lte8 lte7"> <![endif]-->
-<!--[if IE 8]>     <html class="ie ie8 lte9 lte8">		<![endif]-->
-<!--[if IE 9]>     <html class="ie ie9 lte9">			<![endif]-->
-<!--[if gt IE 9]>  <html>								<![endif]-->
-<!--[if !IE]><!--> <html>								<!--<![endif]-->
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
@@ -16,30 +11,77 @@
         div { width:500px; margin-left:auto; margin-right:auto;}
         #conversation_board { padding:5px; background:#ddd; border-radius:5px; overflow-y: scroll;
                    border:1px solid #CCC; margin-top:10px; height: 160px; }
-        #input_messenger { border-radius:2px; border:1px solid #ccc;
+        .input_text { border-radius:2px; border:1px solid #ccc;
                  margin-top:10px; padding:5px; width:400px;  }
         #status { width:88px; display:block; float:left; margin-top:15px; }
 	</style>
+
+    <script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/axios@0.18.0/dist/axios.js"></script>
 
 </head>
 
 <body>
 
+<form action="postlogin" method="post" id="postlogin" enctype=>
+    <label>Name: <input class="input_text" type="text" name="name" placeholder="Type your name here" /></label><br />
+    <label>Age: <input class="input_text" type="text" name="age" placeholder="Type your age here" /></label>
+    <input type="submit" value="Done" />
+</form>
+
 <span id="status">Connecting...</span>
-<input id="input_messenger" type="text" disabled="disabled" />
-<!-- <button id="send_messenger">发送</button> -->
+<input class="input_text" id="input_messenger" type="text" disabled="disabled" />
+<button id="send_messenger">发送</button>
 
 <div id="conversation_board"></div>
 
-<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript">
 $(function () {
     "use strict";
 
+    var url='ws://127.0.0.1:3001';
+
+    $.fn.serializeObject = function(){
+        var o = {};
+        var a = this.serializeArray();
+        $.each(a, function() {
+            if (o[this.name] !== undefined) {
+                if (!o[this.name].push) {
+                    o[this.name] = [o[this.name]];
+                }
+                o[this.name].push(this.value || '');
+            } else {
+                o[this.name] = this.value || '';
+            }
+        });
+        return o;
+    };
+
     // for better performance - to avoid searching in DOM
     var content = $('#conversation_board');
     var input = $('#input_messenger');
+    var send = $('#send_messenger');
     var status = $('#status');
+    var postlogin=$('#postlogin');
+    
+    postlogin.on('submit',function(e){
+        e.preventDefault();
+        var xhr=new XMLHttpRequest();
+        xhr.open('post', 'postlogin', true);
+        xhr.onreadystatechange=function(){
+            if (xhr.readyState === 4 && xhr.status === 200) {
+                console.log(xhr.responseText)
+                var result=JSON.parse(xhr.responseText);
+                afterAuth(result.name);
+            }
+        }
+        xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");//declare this is a form
+        xhr.send($('#postlogin').serialize());  
+    })
+
+    function afterAuth(name){
+        sendMessenger(name);
+    }
 
     // my color assigned by the server
     var myColor = false;
@@ -54,12 +96,13 @@ $(function () {
         content.html($('<p>', { text: 'Sorry, but your browser doesn\'t '
                                     + 'support WebSockets.'} ));
         input.hide();
-        $('span').hide();
+        status.hide();
+        button.hide();
         return;
     }
 
     // open connection
-    var connection = new WebSocket('ws://localhost:3001');
+    var connection = new WebSocket(url);
 
     connection.onopen = function () {
         // first we want users to enter their names
@@ -110,25 +153,34 @@ $(function () {
     /**
      * Send mesage when user presses Enter key
      */
-    input.keydown(function(e) {
+    send.on('click',function(e) {
+        //if (e.keyCode === 13) {
+            sendMessenger()
+        //}
+    });
+    input.on('keyup',function(e) {
         if (e.keyCode === 13) {
-            var msg = $(this).val();
-            if (!msg) {
-                return;
-            }
-            // send the message as an ordinary text
-            connection.send(msg);
-            $(this).val('');
-            // disable the input field to make the user wait until server
-            // sends back response
-            input.attr('disabled', 'disabled');
-
-            // we know that the first message sent from a user their name
-            if (myName === false) {
-                myName = msg;
-            }
+            sendMessenger()
         }
     });
+
+    function sendMessenger(msg){
+        var msg = msg|| input.val();
+        if (!msg) {
+            return;
+        }
+        // send the message as an ordinary text
+        connection.send(msg);
+        input.val('');
+        // disable the input field to make the user wait until server
+        // sends back response
+        input.attr('disabled', 'disabled');
+
+        // we know that the first message sent from a user their name
+        if (myName === false) {
+            myName = msg;
+        }
+    }
 
     /**
      * This method is optional. If the server wasn't able to respond to the
@@ -146,11 +198,18 @@ $(function () {
     /**
      * Add message to the chat window
      */
-    function addMessage(author, message, color, dt) {
-        content.prepend('<p><span style="color:' + color + '">' + author + '</span> @ ' +
-             + (dt.getHours() < 10 ? '0' + dt.getHours() : dt.getHours()) + ':'
-             + (dt.getMinutes() < 10 ? '0' + dt.getMinutes() : dt.getMinutes())
-             + ': ' + message + '</p>');
+    function addMessage(author, message, color, timestamp) {
+        content.prepend(
+            '<p><span style="color:' 
+            + color 
+            + '">' 
+            + author 
+            + '</span> @ ' 
+            + new Date(timestamp).toLocaleString()
+            + ': ' 
+            + message 
+            + '</p>'
+        );
     }
 });
 </script>
